# ai-shader-tool

./: .gitignore  .gitmodules  .pre-commit-config.yaml  BUILD_FIXES_SUMMARY.md  CMakeLists.txt  CMakeLists_test.txt  IMPLEMENTATION_PLAN.md  Makefile  PYVVISF_BUG_REPORT.md  README.md  TEST_SUMMARY.md  bug_reproduction.py  build.py  debug_resource.py  framework_reproduction.py  pyproject.toml  pytest.ini  setup_dev.py  test_phase4.py
docs/: MCP_SERVER.md  ai-guide.md
documents/: PYTHON_API.md  VVISF-GL_Build_and_Integration.md  ai-coding-documentation.md
examples/: config.yaml  cursor_troubleshooting.md  mcp_client.py  mcp_example.py  simple_test.py  test_aurora_mcp.py  test_cursor_http_debug.py  test_cursor_mcp.py  test_fastmcp.py  test_fastmcp_http.py  test_http_mcp.py  test_http_server.py  test_shader.fs  test_stdio_mcp.py
examples/shaders/: aurora.fs  example.fs
patches/: vvisf-glfw-support.patch
scripts/: build_vvisf.sh  setup.sh
src/: vvisf_bindings.cpp
src/isf_shader_renderer/: __init__.py  cli.py  config.py  platform.py  renderer.py  utils.py
src/isf_shader_renderer/mcp/: __init__.py  config.py  handlers.py  http_server.py  models.py  server.py  utils.py
tests/: __init__.py  test_aurora_mcp.py  test_cli_integration.py  test_config.py  test_glbuffer_conversion.py  test_mcp.py  test_renderer.py  test_utils.py  test_vvisf_bindings.py
