[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isf-shader-renderer"
version = "0.1.0"
description = "A Python tool for rendering ISF shaders to PNG images at specified time codes"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jim Cortez", email = "jim.cortez@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "pillow>=9.0.0",
    "numpy>=1.21.0",
    "jsonschema>=4.0.0",
    "rich>=12.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]
vvisf = [
    "pyvvisf>=0.2.0",
]

[project.scripts]
isf-shader-render = "isf_shader_renderer.cli:cli"

[project.urls]
Homepage = "https://github.com/jimcortez/ai-shader-tool"
Repository = "https://github.com/jimcortez/ai-shader-tool"
Documentation = "https://github.com/jimcortez/ai-shader-tool#readme"
Issues = "https://github.com/jimcortez/ai-shader-tool/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=isf_shader_renderer",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "regression: marks tests for preventing regressions of previously fixed bugs",
    "stress: marks stress tests for stability testing",
]
